--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -8,6 +8,29 @@
 
 const logout = async (e) => {
 //Include the code for logout here.
+    // sessionStorage.clear()
+    let logout_url = window.location.origin+"/djangoapp/logout";
+    // const res = await fetch(logout_url, {
+    //     method: "GET",
+    // });
+    // const json = await res.json();
+
+    let username = sessionStorage.getItem('username');
+    sessionStorage.removeItem('username');
+    alert("Logging out "+username+"...")
+    window.location.href = window.location.origin;
+    // window.location.reload();
+    
+    // if (json) {
+    //     let username = sessionStorage.getItem('username');
+    //     sessionStorage.removeItem('username');
+    //     window.location.href = window.location.origin;
+    //     window.location.reload();
+    //     alert("Logging out "+username+"...")
+    // }
+    // else {
+    //     alert("The user could not be logged out.")
+    // }
 };
 
 let checkSession = ()=>{
@@ -20,10 +43,11 @@ let checkSession = ()=>{
   } else {
     document.getElementById("loginlogout").innerHTML = 
     '<a class="homepage_links" href="/login">Login</a>'+
-    '<a class="homepage_links"  href="/register">Register</a>'
+    '<a class="homepage_links" href="/register">Register</a>'
   }
  }
 </script>
+
 </head>
 <body onload="checkSession()">
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
